--- a/TodoASMX/TodoASMX.csproj
+++ b/TodoASMX/TodoASMX.csproj
@@ -37,6 +37,9 @@
     <EmbeddedResource Update="Views\ConversorPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\ConversorPage2.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 
   <ItemGroup>
